# symaths

./: CMakeLists.txt  README.md  symaths.cpp  symaths.h
lib/: CMakeLists.txt  README.md
lib/mathgen/: C&T.odt  CMakeLists.txt
lib/mathgen/include/: convergence.h  fitness.h  functions.h  island.h  island_manager.h  model_manager.h  mutations.h  node.h  operators.h  random.h  threading.h  tree_utils.h
lib/mathgen/include/cma-es/: README.docx  cma_es.h  matrix.h  params.h
lib/mathgen/src/: convergence.cpp  fitness.cpp  island_manager.cpp  model_manager.cpp  tree_utils.cpp
lib/symaths/: CMakeLists.txt
lib/symaths/include/symaths/: base_functions.hpp  base_operations.hpp  complex.hpp  differentiation.hpp  equation.hpp  expression.hpp  expressions_manip.hpp  fwd_decls.hpp  interval.hpp  numbers.hpp  parser.hpp  polynomial.hpp  sets.hpp  symaths.hpp  symbol.hpp
lib/symaths/include/symaths/detail/: nodes.h  nodes.hpp
lib/symaths/include/symaths/parsing/: compiler.hpp  lexer.hpp  parser.hpp
lib/symaths/include/symaths/utils/: helpers.hpp  maths.h  maths.hpp
lib/symaths/src/: base_functions.cpp  base_operations.cpp  differentiation.cpp  equation.cpp  expression.cpp  expressions_manip.cpp  numbers.cpp  parser.cpp  polynomial.cpp  symaths.cpp
lib/symaths/src/detail/: nodes.cpp
lib/symaths/src/parsing/: lexer.cpp  parser.cpp
lib/symaths/src/utils/: maths.cpp
tests/: CMakeLists.txt
tests/expressions/: CMakeLists.txt  basic_exprs_computing.cpp  internal_funcs.cpp
tests/mathgen/test0/: CMakeLists.txt  test.cpp
tests/mathgen_tests/: CMakeLists.txt  test.cpp
